# EmbarcaTechProjetoRevisao

./: CMakeLists.txt  README.md  revisao.c
lib/: font.h
