cmake_minimum_required(VERSION 3.13)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(PICO_BOARD pico CACHE STRING "Board type")

include(pico_sdk_import.cmake)
project(revisao C CXX ASM)
pico_sdk_init()
add_executable(revisao revisao.c lib/ssd1306.c)
pico_set_program_name(revisao "revisao")
pico_set_program_version(revisao "0.1")
pico_enable_stdio_uart(revisao 1)
pico_enable_stdio_usb(revisao 1)
pico_generate_pio_header(revisao ${CMAKE_CURRENT_LIST_DIR}/revisao.pio)
target_sources(revisao PRIVATE revisao.c)
target_link_libraries(revisao pico_stdlib hardware_i2c hardware_adc hardware_pwm hardware_pio hardware_clocks)
target_include_directories(revisao PRIVATE   ${CMAKE_CURRENT_LIST_DIR})
pico_add_extra_outputs(revisao)
